VR: Destroy the Daydream keyboard when WebVR mode is enabled

Bug: 802833
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I92b5fe928993824e8d72ddacf52fea06fb600f6e